--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#navbar {
+  height: 75px;
+  width: 100%;
+  border: 1px solid black;
+}
+
+#nav-title {
+  font-size: 30px;
+  top: 100%;
+  text-align: center;
+}
+
