--- a/src/index.css
+++ b/src/index.css
@@ -60,12 +60,30 @@ code {
 }
 
 #card-name {
+  color: white;
   text-align: center;
   font-size: 30px;
 }
 
+#card-fullname {
+  text-align: center;
+  font-size: 20px;
+}
+
+#add-button {
+  height: 50px  
+}
+
+#alignment {
+  text-align: right;
+  padding-bottom: 5px;
+}
+
 #result-profile-data {
-  text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-between;
   width: 275px;
   height: 280px;
 }
