--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: ;
 }
 
 code {
@@ -19,19 +20,33 @@ code {
 }
 
 #navbar {
-  height: 75px;
   width: 100%;
-  border: 1px solid black;
+  height: 95px;
+  background-color: yellow;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 #nav-title {
-  
+  position: absolute;
   font-family: 'Lobster', cursive;
-  font-size: 55px;
+  font-size: 70px;
   text-align: center;
 }
 
-#app-main {
+#nav-list {
+  margin-left: 1000px;
+  width: 350px;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.app-main {
   min-height: 750px;
   width: 1000px;
   display: flex;
