--- a/src/index.css
+++ b/src/index.css
@@ -74,13 +74,13 @@ code {
   width: 500px; 
 }
 
-#card-name {
+#result-card-name {
   color: white;
   text-align: center;
   font-size: 30px;
 }
 
-#card-fullname {
+#result-card-fullname {
   text-align: center;
   font-size: 20px;
 }
@@ -101,4 +101,19 @@ code {
   justify-content: space-between;
   width: 275px;
   height: 280px;
+}
+
+#supes-grid {
+  margin-top: 50px;
+  background-color: grey;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.supes-cards {
+  margin: 15px;
+  width: 300px;
+  height: 250px;
+  background-color: orange;
 }
