--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,15 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-image: url("https://imgur.com/PYNZb3s.png");
+  background-size: 100%;
+  background-attachment: fixed;
 }
 
 #navbar {
   width: 100%;
   height: 95px;
-  background-color: yellow;
+  background-color: #F6DB35;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -37,40 +40,45 @@ code {
 }
 
 #nav-list {
-  margin-left: 1000px;
+  margin-left: 950px;
   width: 350px;
-  list-style-type: none;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
+  list-style-type: none;
 }
 
 .app-main {
   min-height: 750px;
-  width: 1000px;
+  width: 950px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: blue;
+  background-color: #4C94F6;
 }
 
 #search-input {
   margin-top: 20px;
   height: 50px;
-  width: 500px;
+  width: 600px;
   font-size: 20px;
 }
 
 #results-card {
-  padding: 5px 0px 0px 0px;
-  margin: 10px;
+  padding: 20px;
+  margin: 20px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   flex-direction: row;
   height: 280px;
   width: 500px; 
+  background-color: #EE5454;
+}
+
+#results-list {
+  list-style-type: none;
 }
 
 #result-card-name {
@@ -85,7 +93,13 @@ code {
 }
 
 #add-button {
-  height: 50px  
+  height: 50px;  
+  background-color: #FFC510;
+  border: none;
+}
+
+#add-button:hover {
+  cursor: pointer;
 }
 
 #alignment {
@@ -115,4 +129,104 @@ code {
   width: 300px;
   height: 250px;
   background-color: orange;
+}
+
+@media (max-width: 650px) {
+
+  .App {
+    background-size: 200%;
+    box-sizing:border-box;
+  }
+
+  #navbar {
+    width: 100%;
+    height: 70px;
+    background-color: #F6DB35;
+    justify-content: left;
+  }
+
+  #icono-home {
+    height: 30px;
+  }
+
+  #icono-buscador {
+    height: 20px;
+  }
+
+  #nav-title {
+    position: absolute;
+    font-size: 35px;
+    padding-left: 10px;
+    text-align: center;
+  }
+
+  #nav-user {
+    display: none;
+  }
+
+  #nav-list {
+    margin-left: 220px;
+    width: 125px;
+  }
+
+  .app-main {
+    width: 350px;
+  }
+
+  #search-input {
+    margin-top: 20px;
+    height: 50px;
+    width: 325px;
+    font-size: 20px;
+  }
+
+  #results-card {
+    padding: 25px 0px 50px 0px;
+    margin: 0px 0px 50px 0px;
+    height: 200px;
+    width: 300px; 
+    background-color: transparent;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+  }
+
+  #imagen-super {
+    height: 250px;
+  }
+
+  #result-card-name {
+    color: white;
+    text-align: center;
+    font-size: 20px;
+  }
+  
+  #result-card-fullname {
+    text-align: center;
+    font-size: 15px;
+  }
+
+  #alignment {
+    font-size: 13px;
+  }
+  
+  #add-button {
+    height: 40px;
+    width: 110px;
+    margin-left: 5px; 
+  }
+
+  #alignment {
+    text-align: center;
+    padding-bottom: 20px;
+  }
+  
+  #result-profile-data {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-between;
+    width: 275px;
+    height: 280px;
+  }
 }
